# Radiant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPS  NOTES.md  README.md
resources/shaders/: checker.wgsl  pass_through.wgsl
src/: CMakeLists.txt  angle.c  angle.h  array_element_count.h  assert.c  assert.h  buffer.c  buffer.h  camera.c  camera.h  colour3.h  constants.h  engine.c  engine.h  equal.c  equal.h  equal_test.c  glfw.h  io.c  io.h  mat4x4.c  mat4x4.h  mat4x4_test.c  no_return.h  pad.h  point3.c  point3.h  point3_test.c  resource_manager.c  resource_manager.h  shader.c  shader.h  size.h  surface_metal.h  surface_metal.mm  surface_win.c  surface_win.h  surface_x11.c  surface_x11.h  test.c  (+22 more)
src/cmd/: CMakeLists.txt  main.c
